<resources>
    <string name="app_name">Pharmacy QT</string>
    <string name="convert">Convert</string>
    <string name="days">Days of Supply</string>
    <string name="convert_original">Original RX</string>
    <string name="convert_mg">mg/</string>
    <string name="convert_ml">ml</string>
    <string name="convert_strength">Strength:</string>
    <string name="convert_take">Take:</string>
    <string name="convert_for">For:</string>
    <string name="convert_final">Take xxx</string>
    <string name="convert_new">New RX: </string>
    <string name="convert_calculate">Calculate</string>
    <string name="convert_total_ml">Total ml:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
